--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          otp-version: "26.0"
+          otp-version: "26.1.2"
           elixir-version: "1.15.7"
 
       - name: Restore dependencies cache
@@ -55,11 +55,17 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
 
+      - name: Check Unused Dependencies
+        run: mix deps.unlock --check-unused
+
       - name: Check Formatting
         run: mix format --check-formatted
 
       - name: Compiling to check for warnings
         run: mix compile --warnings-as-errors
+
+      - name: Run Credo
+        run: mix credo --strict
 
       - name: Run Tests
         run: mix test
