--- a/python_service/requirements.txt
+++ b/python_service/requirements.txt
@@ -1,5 +1,16 @@
+# Web framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
+
+# Database
+sqlalchemy>=2.0.36
+
+# HTTP client
 httpx==0.26.0
+
+# Testing
 pytest==7.4.4
+pytest-asyncio==0.23.3
+
+# Linting
 ruff==0.1.14
