--- a/python_service/requirements.txt
+++ b/python_service/requirements.txt
@@ -8,6 +8,12 @@ sqlalchemy>=2.0.36
 # HTTP client
 httpx==0.26.0
 
+# OpenAI-compatible client for vLLM
+openai>=1.0.0
+
+# Image processing (optional, for image validation)
+pillow>=10.0.0
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
