Disable Python AI Service Test step
Disable the Python AI Service Test step in CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
   test-python:
     name: Python AI Service Test
     runs-on: ubuntu-latest
+    if: false
     # specific path for python service
     defaults:
       run:
