feat(ai): add smart item categorization with auto-suggestions
- Add zero-shot classification endpoint in Python service using HuggingFace transformers
- Auto-trigger category suggestions when typing item names (3+ chars, 500ms debounce)
- Display suggestion chip with category name and confidence level (high/medium/low)
- Click suggestion to apply category to form
- Add USE_REAL_CLASSIFICATION feature flag (default: mock for dev)
- Include confidence_level in API response payload

Implements AI-001 spec

--- a/python_service/requirements.txt
+++ b/python_service/requirements.txt
@@ -8,6 +8,10 @@ sqlalchemy>=2.0.36
 # HTTP client
 httpx==0.26.0
 
+# AI / ML - Zero-Shot Classification
+transformers>=4.30.0
+torch>=2.0.0
+
 # OpenAI-compatible client for vLLM
 openai>=1.0.0
 
