Fix money precision issue by using Money.parse instead of float conversion
- Replace Float.parse with Money.parse to avoid floating-point precision errors
- Money.parse handles decimal precision correctly for monetary values
- Eliminates risk of off-by-one-cent errors from round(amount * 100) calculation

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ npm-debug.log
 # Uploaded receipt files
 /priv/uploads/receipts/*
 !/priv/uploads/receipts/.gitkeep
+/priv/static/uploads/receipts/*
+!/priv/static/uploads/receipts/.gitkeep
 
 # AI agent prompt transcripts
 *-userprompt.txt
@@ -70,4 +72,8 @@ htmlcov/
 venv/
 ENV/
 ai_service.db
+python_service/tests/*.RAW-01.COVER.jpg
 
+# Local agent/session state
+.omc/
+**/.omc/
